--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,3 +9,5 @@ License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
+URL: https://github.com/der-architekt28/lukaspackage
+BugReports: https://github.com/der-architekt28/lukaspackage/issues
